--- a/src/pages/Board.css
+++ b/src/pages/Board.css
@@ -1,37 +1,65 @@
+.App{
+  background-color: #0d1018;
+}
+
 .main {
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: #0d1018;
   }
 
 .mainBoard{
     margin: auto;
+    background-color: #0d1018;
   }
   
   .Board-logo {
     height: 40vmin;
     pointer-events: none;
+    background-color: #0d1018;
   }
   
+
   @media (prefers-reduced-motion: no-preference) {
     .Board-logo {
       animation: App-logo-spin infinite 20s linear;
     }
   }
   
+.Board{
+  background-color: #ffffff;
+}
+
   .Board-header {
-    background-color: #282c34;
+    background-color: #dfe4f1;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    color: white;
+    color: #0d1018;
   }
   
   .Board-link {
     color: #61dafb;
   }
+
+  .title{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size:50px;
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
+  }
   
+  .betbutton{
+    width: 90px;
+   
+
+  }
+
+
   @keyframes App-logo-spin {
     from {
       transform: rotate(0deg);
@@ -41,3 +69,4 @@
     }
   }
   
+
