--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -3,7 +3,7 @@
 .App {
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-align: center;
-  background-color: #282c34;
+  background-color: #0d1018;
   min-height: 100vh;
   color: #ffffff;
 }
@@ -20,7 +20,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #0d1018;
   flex-direction: column;
   justify-content: center;
   color: rgb(255, 255, 255);
@@ -51,24 +51,44 @@
   
 }
 
-/* Wallet Button */
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Adjust as needed for vertical positioning */
+  font-size: 25px;
+}
+
 .metamask-button {
   font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 15px;
+  font-size: 25px;
   font-weight: bold;
-  background-color: #282c34;
+  background-color: #0d1018;
   color: #ffffff;
-  padding: 10px 20px;
+  padding: 15px 25px;
   border: 1.5px solid;
   border-color: #d9d9da;
   cursor: pointer;
-  border-radius: 20px;
-  float: right;
-  margin-right: 2%;
-  
+  border-radius: 50px; /* Make it a rounded box */
 }
+
 
 /* Add hover effect for the button */
 .metamask-button:hover {
   background-color: #d9d9da; /* Lighter yellow on hover */
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Adjust as needed for vertical positioning */
+}
+
+.centered-logo {
+  max-width: 100%; /* Ensure the logo doesn't exceed its container */
+  margin-bottom: 10px; /* Adjust the spacing between the logo and button */
+  float: left;
 }
